--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,20 +2,20 @@
 {{!-- Navbar Start --}}
 <nav class="navbar mb-4">
     <img class="navbar-logo" src="/images/logo.png" alt="Robogotchi Logo">
-    <span class="navbar-brand">Killer Mutant Robogotchis!!!!</span>
+    <span class="navbar-brand">Robogotchi Cyber Pets!!!</span>
     <span style="width: 100px"></span>
 </nav>
 {{!-- Navbar End --}}
 
-
+{{!-- Main Container Start --}}
 <div class="container">
     <div class="row">
 
         {{!-- Signup Card Start --}}
         <div class="card col-5 border-0 sign-up-card">
-            <div class="card-body d-flex flex-wrap align-content-between m-5 sign-up">
-                <h3 class="card-title text-center mt-5 w-100">Sign Up!</h3>
-                <a href="/signup" class="btn btn-success w-50 mx-auto mb-3" role="button">Sign Up!</a>
+            <div class="card-body d-flex flex-wrap align-content-center sign-up">
+                <h3 class="card-title text-center w-100">Sign Up!</h3>
+                <a href="/signup" class="btn btn-success mx-auto mb-3" role="button">Sign Up!</a>
             </div>
         </div>
         {{!-- Signup Card End --}}
@@ -46,7 +46,9 @@
         
     </div>
 </div>
+{{!-- Main Container End --}}
+
 
 {{!-- Scripts --}}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="js/login.js"></script>
+<script src="/js/login.js"></script>
