--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,7 +1,8 @@
+
 {{!-- Navbar Start --}}
 <nav class="navbar mb-4">
     <img class="navbar-logo" src="/images/logo.png" alt="Robogotchi Logo">
-    <span class="navbar-brand">Killer Mutant Robogotchis!!!!</span>
+    <span class="navbar-brand">Robogotchi Cyber Pets!!!</span>
     <a id="login" href="/login">Already a User?</a>
 </nav>
 {{!-- Navbar End --}}
