--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,11 +24,19 @@
     </video>
     {{!-- Background Vid End --}}
     
-
     <div class="content">
         {{{body}}}
     </div>
-  
+
+    {{!-- Footer Start --}}
+    <footer class="footer mt-auto py-3">
+        <div class="container text-center">
+            <p> Free Stock Footage by <a class="credit" href="http://www.videezy.com" target="_blank">Videezy</a> </p>
+            <p class="mb-0">Designed and Coded by &copy; <a class="team" href="https://github.com/KyleK86" target="_blank" onclick="window.open('https://github.com/TreezCode', 'Treez Github'); window.open('https://github.com/amandadovel', 'Amanda Github'); window.open('https://github.com/ahardy42', 'Andy Github');">Purple Monkey Hackers</a></p> 
+        </div>
+    </footer>
+    {{!-- Footer End --}}
+
 
     {{!-- Moment --}}
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
