--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 
 {{!-- Navbar Start --}}
-<nav class="navbar mb-4">
+<nav class="navbar mb-5">
     <img class="navbar-logo" src="/images/logo.png" alt="Robogotchi Logo">
     <span class="navbar-brand">Robogotchi Cyber Pets!!!</span>
     <span style="width: 100px"></span>
@@ -8,11 +8,11 @@
 {{!-- Navbar End --}}
 
 {{!-- Main Container Start --}}
-<div class="container">
-    <div class="row">
+<div class="container pt-5">
+    <div class="row justify-content-between">
 
         {{!-- Signup Card Start --}}
-        <div class="card col-5 border-0 sign-up-card">
+        <div class="card col-5 border-0">
             <div class="card-body d-flex flex-wrap align-content-center sign-up">
                 <h3 class="card-title text-center w-100">Sign Up!</h3>
                 <a href="/signup" class="btn btn-success mx-auto mb-3" role="button">Sign Up!</a>
