updated logic to allow setting health to 100

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
         <div class="card col-5 border-0">
             <div class="card-body">
                 <h3 class="card-title text-center">Your 'Gotchi</h3>
-                <div id="user-gotchi">{{dataValues.gotchiName}}</div>
+                <div id="user-gotchi" data-type="{{dataValues.gotchiType}}">{{dataValues.gotchiName}}</div>
                 <div class="text-center mb-3">
                     <img src="{{dataValues.gotchiPicture}}" class="img-fluid rounded" id="gotchi-img">
                 </div>
