minor index.hbs update

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
                         data-target="#modal2"><span>Boredom Level: {{dataValues.bored}}</span><span><small class="text-muted">( Click to Entertain )</small></span></button>
                     <button data-health="{{dataValues.health}}" data-points="{{dataValues.lazy}}" data-id="{{dataValues.id}}" data-column="lazy" type="button"
                         class="list-group-item list-group-item-action action-btn" id="exerciseBtn" data-toggle="modal"
-                        data-target="#modal3"><span>Laziness Level: {{dataValues.lazy}}</span><span><small class="text-muted">( Cick to Excercise )</small></button>
+                        data-target="#modal3"><span>Laziness Level: {{dataValues.lazy}}</span><span><small class="text-muted">( Cick to Excercise )</small></span></button>
                 </div>
                 <hr>
                 <ul class="list-group">
